mediawiki/mediawiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-deployment
  labels:
    app: mediawiki
  namespace: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/mwnetwork: "true"
        app: mediawiki
    spec:
      containers:
      - name: mediawiki
        image: mediawiki:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: mediawiki-svc
        volumeMounts:
        - mountPath: /opt/mediawiki-data
          name: mediawiki-data-vol
      volumes:
      - name: mediawiki-data-vol
        hostPath:
          path: /opt/mediawiki-data
          type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
  name: mediawiki-service
  namespace: mediawiki
spec:
  type: NodePort
  selector:
    app: mediawiki
  ports:
  - name: mediawiki-service-port
    protocol: TCP
    port: 80
    targetPort: mediawiki-svc
    nodePort: 30100
