mediawiki/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mediawiki-networkpolicy
  namespace: mediawiki
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          network/mwnetwork: "true"
  podSelector:
    matchLabels:
      network/mwnetwork: "true"
